fix navbar z-index

--- a/app/assets/stylesheets/parts/layout.css.scss
+++ b/app/assets/stylesheets/parts/layout.css.scss
@@ -3,7 +3,6 @@ body {
 
   > header {
     margin-bottom: $navbar-height + $navbar-margin-bottom + $font-size-base;
-    z-index: $zindex_navbar;
   }
 
   > footer {
@@ -36,7 +35,6 @@ body {
 }
 
 .navbar {
-  z-index: $zindex_navbar;
 
   .navbar-brand {
     position: relative;
